cmake_minimum_required(VERSION 3.4)
project(Algorithm CXX)


add_subdirectory(RemoveElement)
add_subdirectory(RemoveDupElements)
add_subdirectory(RemoveDupnumElements)
add_subdirectory(PlusOne)
add_subdirectory(PascalTriangle)
add_subdirectory(PascalTriangleII)
add_subdirectory(MergeSortedArr)
add_subdirectory(Sum)